dummy page i guess

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
     <title>Hello There!</title>
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">    
 </head>
 <body>
-
+<h1>Hey, Hello!</h1>
+<p>
+    This Website is still empty...<br>
+    I do have an actual <a href="https://adminispwd.com">website</a>
+</p>
 </body>
